work on rest-component.html

--- a/assets/styles/_colors.scss
+++ b/assets/styles/_colors.scss
@@ -4,7 +4,8 @@ $dividerHrBg: #E89024;
 $linkColor: #1D55D0;
 $instructionColor: rgba(34, 34, 33, 0.5);
 $bodyBg: #fbfbfb;
-//Gradients
+$dangerColor: #ED0000;
+  //Gradients
 
 //Shadows
 $dividerHrShadow: 0 4px 16px 0 #0000000A;
