--- a/assets/styles/_utilities.scss
+++ b/assets/styles/_utilities.scss
@@ -54,3 +54,12 @@ video{
   color: #fff
 ;
 }
+.invisible{
+  visibility: hidden;
+}
+.mb-none{
+  margin-block-end: 0 !important;
+}
+.op-0 {
+  opacity: 0;
+}
