--- a/main.css
+++ b/main.css
@@ -537,6 +537,18 @@ video {
   color: #fff;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
+.mb-none {
+  margin-block-end: 0 !important;
+}
+
+.op-0 {
+  opacity: 0;
+}
+
 /*
 0 - 600px:      Phone
 600 - 900px:    Tablet portrait
@@ -896,6 +908,377 @@ ORDER: Base + typography > general layout + grid > page layout > components
   margin-block-start: 2.583rem;
 }
 
+@font-face {
+  font-family: Heebo-Regular;
+  src: url("../fonts/Heebo-Regular.ttf");
+}
+@font-face {
+  font-family: Heebo-Light;
+  src: url("../fonts/Heebo-Light.ttf");
+}
+@font-face {
+  font-family: Heebo-ExtraLight;
+  src: url("../fonts/Heebo-ExtraLight.ttf");
+}
+@font-face {
+  font-family: Heebo-Medium;
+  src: url("../fonts/Heebo-Medium.ttf");
+}
+@font-face {
+  font-family: Heebo-Semibold;
+  src: url("../fonts/Heebo-Semibold.ttf");
+}
+@font-face {
+  font-family: Heebo-Bold;
+  src: url("../fonts/Heebo-Bold.ttf");
+}
+@font-face {
+  font-family: Heebo-ExtraBold;
+  src: url("../fonts/Heebo-ExtraBold.ttf");
+}
+@font-face {
+  font-family: Heebo-Regular;
+  src: url("../fonts/Heebo-Regular.ttf");
+}
+@font-face {
+  font-family: Heebo-Light;
+  src: url("../fonts/Heebo-Light.ttf");
+}
+@font-face {
+  font-family: Heebo-ExtraLight;
+  src: url("../fonts/Heebo-ExtraLight.ttf");
+}
+@font-face {
+  font-family: Heebo-Medium;
+  src: url("../fonts/Heebo-Medium.ttf");
+}
+@font-face {
+  font-family: Heebo-Semibold;
+  src: url("../fonts/Heebo-Semibold.ttf");
+}
+@font-face {
+  font-family: Heebo-Bold;
+  src: url("../fonts/Heebo-Bold.ttf");
+}
+@font-face {
+  font-family: Heebo-ExtraBold;
+  src: url("../fonts/Heebo-ExtraBold.ttf");
+}
+/*
+0 - 600px:      Phone
+600 - 900px:    Tablet portrait
+900 - 1200px:   Tablet landscape
+[1200 - 1800] is where our normal styles apply
+1800px + :      Big desktop
+
+$breakpoint arguement choices:
+- $desktop
+- $laptop
+- $tablet
+- $mobile
+
+ORDER: Base + typography > general layout + grid > page layout > components
+
+1em = 16px
+*/
+.divider_hr {
+  height: 4px;
+  width: 80px;
+  background: #E89024;
+  box-shadow: 0 4px 16px 0 #0000000A;
+  margin-block: 1.333rem 4rem;
+  border-radius: 16px;
+}
+
+.story__divider {
+  height: 1px;
+  background: rgba(34, 34, 33, 0.4);
+  display: block;
+  width: 100%;
+  opacity: 0.4;
+  margin-block: 1rem;
+}
+
+.m-1 {
+  margin-block: 2rem 1rem;
+}
+
+.f-bold {
+  font-weight: 700;
+}
+
+.fs-22 {
+  font-size: 1.833rem;
+}
+
+.fs-16 {
+  font-size: 1.333rem;
+}
+
+video {
+  width: 100%;
+}
+
+.pkr__title {
+  font-weight: 700;
+  font-size: 2.666rem;
+}
+
+.pkr__subtitle {
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+@media only screen and (max-width: 37.5em) {
+  .pkr__subtitle {
+    font-size: 1.333rem;
+  }
+}
+
+.alert_instructions-danger {
+  background: #ED0000;
+  color: #fff;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
+.mb-none {
+  margin-block-end: 0 !important;
+}
+
+.op-0 {
+  opacity: 0;
+}
+
+.pkr__panel-container {
+  overflow: hidden;
+  position: relative;
+}
+.pkr__panel-container .panel-heading {
+  background: #ED0000 !important;
+  color: #ffffff !important;
+  padding: 0;
+  cursor: pointer;
+}
+.pkr__panel-container .panel-heading .panel-title {
+  justify-content: center;
+}
+.pkr__panel-container .panel-heading .panel-title img {
+  margin-inline-end: 7px;
+}
+.pkr__panel-container .panel-heading .panel-title.multiple img.notification_type {
+  display: none;
+}
+.pkr__panel-container a[data-parent="#accordion"] {
+  text-align: center;
+  height: 50px;
+  max-height: 50px;
+  width: unset !important;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-inline-end: 12px;
+}
+.pkr__panel-container .expand_btn.custom {
+  border: 0;
+  background: none;
+  width: 10px;
+  height: auto;
+}
+.pkr__panel-container .expand_btn.custom.collapsed {
+  transform: rotate(-180deg) translateY(-2px);
+  transform-origin: center;
+}
+.pkr__panel-container .panel-body {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 32px 0 36px 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 4px solid #ED0000;
+}
+@media only screen and (max-width: 57.25em) {
+  .pkr__panel-container .panel-body {
+    padding: 0 0 36px 0;
+  }
+}
+.pkr__panel-container .panel-body .one__notification {
+  max-width: 302px;
+  width: 100%;
+  margin: 0 auto;
+}
+.pkr__panel-container .panel-body .one__notification .panel-body-date {
+  text-align: center;
+  color: #222221;
+  font-size: 12px;
+  font-weight: 500;
+  margin-block-end: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pkr__panel-container .panel-body .one__notification .panel-body-date img {
+  margin-inline-end: 6px;
+}
+.pkr__panel-container .panel-body .one__notification .panel-body-cities ul {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: #222221;
+  font-weight: 600;
+  font-size: 16px;
+}
+.pkr__panel-container .panel-body .one__notification .instructions {
+  text-align: center;
+  color: #222221;
+}
+.pkr__panel-container .panel-body .one__notification .instructions img {
+  margin-inline-end: 6px;
+}
+.pkr__panel-container .panel-body .one__notification .instructions .instructions__link {
+  display: flex;
+  align-items: center;
+  margin-block-start: 12px;
+  text-align: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 16px;
+}
+.pkr__panel-container .panel-body .one__notification .instructions .instructions__link img {
+  margin-inline-start: 7px;
+}
+.pkr__panel-container .panel-body.multiple {
+  flex-direction: column;
+}
+.pkr__panel-container .panel-body.multiple .one__notification {
+  display: none;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  max-width: 1088px;
+  width: 100%;
+  margin: 0 auto;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper {
+  border-left: 1px solid rgba(34, 34, 33, 0.16);
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper.no__border {
+  border-left: 0;
+}
+@media only screen and (max-width: 57.25em) {
+  .pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper.no__border {
+    border-left: 1px solid rgba(34, 34, 33, 0.16);
+  }
+}
+@media only screen and (max-width: 57.25em) {
+  .pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper {
+    padding-block-start: 16px;
+    padding-block-end: 16px;
+    border-bottom: 1px solid rgba(34, 34, 33, 0.16);
+  }
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .panel-body-date {
+  display: flex;
+  justify-content: flex-end;
+  margin-block-end: 16px;
+  padding-inline-end: 16px;
+  align-items: center;
+  font-size: 12px;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .panel-body-date img {
+  margin-inline-end: 6px;
+  position: relative;
+  bottom: 2px;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .panel-body-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #ED0000;
+  margin-block-end: 24px;
+  min-height: 73px;
+}
+@media only screen and (max-width: 57.25em) {
+  .pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .panel-body-title.hide_in_mobile {
+    display: none;
+  }
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .cities_instructions__wrapper:last-child {
+  padding-inline: 23px;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .cities_instructions__wrapper .panel-body-cities ul {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .cities_instructions__wrapper .panel-body-cities ul li {
+  font-weight: 600;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .cities_instructions__wrapper .instructions {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .cities_instructions__wrapper .instructions .instructions_label {
+  min-height: 40px;
+  max-height: 40px;
+  margin-block-end: 16px;
+  max-width: 201px;
+  text-align: center;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .cities_instructions__wrapper .instructions .instructions_label img {
+  margin-inline-end: 6px;
+  position: relative;
+  bottom: 2px;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .cities_instructions__wrapper .instructions .instructions_label span {
+  max-width: 201px;
+  overflow-y: auto;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .cities_instructions__wrapper .instructions .instructions__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper .cities_instructions__wrapper .instructions .instructions__link a {
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
+}
+.pkr__panel-container .panel-body.multiple .multiple__notifications .wrapper.border-bottom {
+  border-bottom: 1px solid rgba(34, 34, 33, 0.16);
+}
+
+.dot__divider {
+  background: #ED0000;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  margin-inline: 7px;
+  display: inline-block;
+}
+.dot__divider.black {
+  background: rgba(34, 34, 33, 0.24);
+}
+
+hr {
+  display: block;
+}
+@media only screen and (max-width: 57.25em) {
+  hr {
+    display: none;
+  }
+}
+
 html {
   direction: rtl;
   font-size: 62.5%;
@@ -905,7 +1288,7 @@ html {
     font-size: 56.25%;
   }
 }
-@media only screen and (max-width: 56.25em) {
+@media only screen and (max-width: 57.25em) {
   html {
     font-size: 50%;
   }
