--- a/main.scss
+++ b/main.scss
@@ -9,6 +9,7 @@
 @import "assets/styles/media";
 @import "assets/styles/bootstrap";
 @import "assets/styles/story";
+@import "assets/styles/rest-component";
 
 
 
